k8s-templates/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-mariadb
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}-mariadb
spec:
  selector:
    matchLabels:
      app: ${APP_NAME}-mariadb
  template:
    metadata:
      labels:
        app: ${APP_NAME}-mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        volumeMounts:
        - name: mariadb-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: ${APP_NAME}-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-mariadb
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}-mariadb
  ports:
    - port: 3306
      targetPort: 3306
