k8s-templates/filebrowser.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-filebrowser-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ${APP_NAME}-filebrowser
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-filebrowser
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}-filebrowser
spec:
  selector:
    matchLabels:
      app: ${APP_NAME}-filebrowser
  template:
    metadata:
      labels:
        app: ${APP_NAME}-filebrowser
    spec:
      # SECURITE : On tourne comme www-data pour avoir les droits sur les fichiers PHP
      securityContext:
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:latest
        args: ["-d", "/tmp/database.db"] 
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app-storage
          mountPath: /srv
        # Volume temporaire pour éviter l'erreur de permission sur /config
        - name: temp-config
          mountPath: /config
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: ${APP_NAME}-pvc
      - name: temp-config
        emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-filebrowser-ingress
  namespace: ${NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/tls-acme: "true"
    # Utilise le middleware nommé 'redirect-https' qui est dans le namespace
    traefik.ingress.kubernetes.io/router.middlewares: ${NAMESPACE}-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - files-${URL_SLUG}.${DOMAIN_SUFFIX}
    secretName: ${APP_NAME}-tls-secret
  rules:
  # MODIFICATION : Sous-domaine "files-" + Domaine OVH
  - host: files-${URL_SLUG}.${DOMAIN_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APP_NAME}-filebrowser-service
            port:
              number: 80
