k8s-templates/monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
  - host: monit.${DOMAIN_SUFFIX}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-stack-grafana # Le nom qu'on a déduit de ton script Helm
            port:
              number: 80
